Sostituite liste nei blocchi con set, in modo da essere sicuri che non ci siano ripetizioni.